# CandidateFilter

./: .gitignore  CMakeLists.txt  candidate.cpp  candidate.h  candidatefilter.cpp  candidatefilter.h  candidatescorer.cpp  candidatescorer.h  downloader.cpp  downloader.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  parser.cpp  parser.h
src/: candidate.cpp  candidate.h  candidateFilter.cpp  candidateScorer.cpp  candidateScorer.h  downloader.cpp  downloader.h  main.cpp  parser.cpp  parser.h
src/backend/: candidateFilter.h  candidateScorer.cpp  candidateScorer.h  downloader.cpp  parser.cpp
src/ui/: SkiaUI.cpp  SkiaUI.h  main.cpp
